--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ a:hover {
 .buttons {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 1.563vw;
 }
 
 button {
@@ -103,15 +103,35 @@ button:hover {
     text-shadow: 0 0 10px  rgb(199, 232, 255);
 }
 
+
 /* Styling for smaller screens */
 @media only screen and (max-width: 590px) {
+    body {
+        margin: 0 auto;
+        background-color: #4f4f55;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-family: VT323;
+    }
+
     .title {
         background-image: url(images/small-title.png);
         background-repeat: no-repeat;
         width: 150px;
         height: 90px;
         margin-top: 20px;
-        padding-bottom: 15px;
+        padding-bottom: 50px;
+    }
+
+    .interface {
+        margin-bottom: 20px;
+    }
+
+    #drawing-pad {
+        width: 75vw;
+        height: 75vw;
+    
     }
 
 
