--- a/styles.css
+++ b/styles.css
@@ -27,18 +27,22 @@ a:hover {
     background-image: url(images/title.png);
     background-repeat: no-repeat;
     width: 600px;
-    height: 148px;
+    height: 133px;
 }
 
 .interface {
     display: flex;
     margin-bottom: 40px;
+    margin-top: 15px;
 }
 
+/* this is the drawing pad that will use a grid display*/
 #drawing-pad {
     background-color: white;
-    width: 50vw;
-    height: 50vw;
+    width: 40vw;
+    height: 40vw;
+    display: flex;
+    flex-wrap: wrap;
 
 }
 
@@ -47,7 +51,7 @@ a:hover {
     flex-direction: column;
     align-items: center;
     background-color: #e5e5e5;
-    width: 20vw;
+    width: 15vw;
     justify-content: space-evenly;
 }
 
@@ -59,24 +63,25 @@ a:hover {
 
 button {
     font-family: VT323;
-    font-size: 4vw;
+    font-size: 2.9vw;
     background-color: #efefef;
     border-color: #777777;
     border-width: 0.156vw;
     border-style: solid;
-    padding: 0.391vw 0.625vw 0.391vw 0.625vw;
+    padding: 0.310vw 0.990vw 0.310vw 0.990vw;
 }
 
 button:hover {
     box-shadow: 0 0 8px #4f4f55;
+    scale: 1.2;
 }
 
 .slider {
-    width: 18vw;
+    width: 12vw;
 }
 
 #slider-output {
-    font-size: 3vw;
+    font-size: 2vw;
 }
 
 .footer {
@@ -90,18 +95,33 @@ button:hover {
 }
 
 /* button text colours*/
-#greyscale {
-    color: #777777;
+#eraser {
+    color: #4f4f55;
 }
 
-#neutral {
-    color: #edd39b;
+#clear {
+    color: #4f4f55;
 }
 
-#pastel {
-    color: #f6ccff;
-    text-shadow: 0 0 10px  rgb(199, 232, 255);
+#color-picker {
+    width: 10vw;
+    height: 5vw;
 }
+
+#color-name {
+    margin-top: -40px;
+    width: 15vw;
+    text-align: center;
+}
+
+/* styling for grid elements */
+.box {
+    border-style: solid;
+    border-width: 0.078vw;
+    border-color: black;
+}
+
+
 
 
 /* Styling for smaller screens */
@@ -116,12 +136,12 @@ button:hover {
     }
 
     .title {
-        background-image: url(images/small-title.png);
+        background-image: url(images/icon.png);
         background-repeat: no-repeat;
         width: 150px;
-        height: 90px;
-        margin-top: 20px;
-        padding-bottom: 50px;
+        height: 163px;
+        margin-top: 10px;
+        padding-bottom: 10px;
     }
 
     .interface {
