--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,7 @@ a:hover {
     background-color: white;
     width: 40vw;
     height: 40vw;
-    display: flex;
-    flex-wrap: wrap;
+    display: inline-grid;
 
 }
 
@@ -80,6 +79,7 @@ button:hover {
     width: 12vw;
 }
 
+
 #slider-output {
     font-size: 2vw;
 }
@@ -116,9 +116,7 @@ button:hover {
 
 /* styling for grid elements */
 .box {
-    border-style: solid;
-    border-width: 0.078vw;
-    border-color: black;
+    border: solid black 1px;
 }
 
 
