--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ button:hover {
 
 #slider-output {
     font-size: 2vw;
+    text-align: center;
 }
 
 .footer {
@@ -112,6 +113,7 @@ button:hover {
     margin-top: -40px;
     width: 15vw;
     text-align: center;
+    font-size: 1.5vw;
 }
 
 /* styling for grid elements */
