fixed eraser so that it does not change the colour picker colour when clicked

--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ button:hover {
 
 /* styling for grid elements */
 .box {
-    border: solid black 1px;
+    border: solid rgb(74, 74, 74) 1px;
 }
 
 
